# agent-context-base

./: .gitignore  AGENT.md  CLAUDE.md  README.md
docs/: repo-layout.md  (+30 more)
examples/canonical-analytics/python/: README.md  generate_tests.py  pyproject.toml
examples/canonical-analytics/python/src/analytics_workbench/: config.py  filters.py  main.py
examples/canonical-analytics/python/src/analytics_workbench/analytics/: distributions.py  events.py  funnel.py  heatmap.py  incidents.py  services.py
examples/canonical-analytics/python/tests/smoke/: test_routes_smoke.py
examples/canonical-analytics/python/tests/unit/: test_analytics_distributions.py  test_analytics_events.py  test_analytics_funnel.py  test_analytics_heatmap.py  test_analytics_incidents.py  test_analytics_services.py  test_charts_funnel.py  test_charts_heatmap.py  test_charts_incident.py  test_charts_latency.py  test_charts_service_bar.py  test_charts_time_series.py  test_filters.py
examples/canonical-analytics/rust/: Cargo.toml
examples/canonical-analytics/rust/src/: bin_test.rs  lib.rs  main.rs  test_plotly.rs
examples/canonical-analytics/rust/src/analytics/: distributions.rs  events.rs  funnel.rs  heatmap.rs  incidents.rs  mod.rs  services.rs
examples/canonical-analytics/rust/src/charts/: funnel_chart.rs  heatmap_chart.rs  incident_bar.rs  latency_boxplot.rs  latency_histogram.rs  mod.rs  service_bar.rs  test.rs  time_series.rs
examples/canonical-analytics/rust/src/data/: loader.rs  models.rs
examples/canonical-analytics/rust/src/filters/: mod.rs
examples/canonical-analytics/rust/src/handlers/: fragments.rs  health.rs  mod.rs  pages.rs
examples/canonical-analytics/rust/templates/: base.html  distributions.html  funnel.html  heatmap.html  incidents.html  index.html  services.html  trends.html
examples/canonical-analytics/rust/templates/fragments/: chart.html  details.html  summary.html
examples/canonical-analytics/rust/tests/: smoke.rs  unit_analytics.rs  unit_charts.rs
examples/canonical-api/ocaml-dream-caqti-tyxml-example/: Dockerfile  README.md  dune-project  ocaml-dream-caqti-tyxml-example.opam
examples/canonical-auth/python/: .gitignore  README.md  pyproject.toml
examples/canonical-auth/python/src/: __init__.py  main.py
examples/canonical-auth/python/src/auth/: __init__.py  claims.py  middleware.py  token.py
examples/canonical-auth/python/src/domain/: __init__.py  models.py  store.py
examples/canonical-auth/python/src/registry/: routes.py
examples/canonical-auth/python/src/routes/: admin.py  auth.py  groups.py  me.py  permissions.py  users.py
examples/canonical-auth/python/tests/: conftest.py  test_auth.py  test_me.py  test_token.py
examples/canonical-auth/rust/: Cargo.toml  README.md
examples/canonical-auth/rust/src/: lib.rs  main.rs
examples/canonical-auth/rust/src/auth/: claims.rs  middleware.rs  mod.rs  token.rs
examples/canonical-auth/rust/src/domain/: models.rs  store.rs
examples/canonical-auth/rust/src/registry/: routes.rs
examples/canonical-auth/rust/src/routes/: admin.rs  auth.rs  groups.rs  health.rs  me.rs  mod.rs  users.rs
examples/canonical-auth/rust/tests/: auth_tests.rs  me_tests.rs  token_tests.rs
examples/canonical-auth/rust/tests/common/: mod.rs
examples/canonical-faker/rust/: Cargo.toml  README.md
examples/canonical-faker/rust/src/: distributions.rs  domain.rs  main.rs  pipeline.rs  pools.rs  profiles.rs  validate.rs
examples/canonical-faker/rust/tests/: smoke_test.rs
examples/canonical-multi-backend/duos/elixir-rust-nif/: Cargo.toml  elixir-host.ex  rust-nif.rs  seam.md
examples/canonical-terminal/python-click-blessed/: README.md  pyproject.toml
examples/canonical-terminal/python-click-blessed/taskflow/cli/: __init__.py  main.py
examples/canonical-terminal/python-click-blessed/taskflow/core/: filters.py  loader.py  models.py
examples/canonical-terminal/python-click-blessed/taskflow/interactive/: __init__.py  pager.py
examples/canonical-terminal/python-click-blessed/tests/smoke/: test_cli_smoke.py
examples/canonical-terminal/python-click-blessed/tests/unit/: test_core.py
examples/canonical-terminal/python-typer-textual/: README.md  pyproject.toml
examples/canonical-terminal/python-typer-textual/taskflow/: __init__.py
examples/canonical-terminal/python-typer-textual/taskflow/cli/: __init__.py  main.py
examples/canonical-terminal/python-typer-textual/taskflow/core/: __init__.py  loader.py  stats.py
examples/canonical-terminal/python-typer-textual/taskflow/tui/: __init__.py  app.py  widgets.py
examples/canonical-terminal/python-typer-textual/tests/smoke/: test_cli_smoke.py
examples/canonical-terminal/python-typer-textual/tests/unit/: test_core.py
examples/canonical-terminal/rust-clap-ratatui/: Cargo.toml  README.md
examples/canonical-terminal/rust-clap-ratatui/src/: main.rs
examples/canonical-terminal/rust-clap-ratatui/src/cli/: commands.rs  mod.rs  output.rs
examples/canonical-terminal/rust-clap-ratatui/src/core/: filters.rs  loader.rs  mod.rs  models.rs  stats.rs
examples/canonical-terminal/rust-clap-ratatui/src/tui/: app.rs  state.rs  ui.rs
examples/canonical-terminal/rust-clap-ratatui/tests/: smoke_cli.rs
(+1797 files in other folders)
