[project]
name = "analytics-workbench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "plotly>=5.20",
  "pandas>=2.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
