[package]
name = "analytics-workbench-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
plotly = { version = "0.10", features = ["plotly_ndarray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
axum-test = "14"
