[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-py-textual"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "rich>=13",
  "textual>=0.47",
  "typer>=0.9",
]

[project.scripts]
taskflow = "taskflow.cli.main:app"

[tool.setuptools.packages.find]
include = ["taskflow*"]
