[package]
name = "taskflow-rs-ratatui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taskflow"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

